--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     </div>
 
     <div class="navbar-season">2025/26 Season · GW26</div>
+
+    <!-- 数据状态指示器 -->
+    <div id="data-status" class="data-status status-offline">
+      <span class="status-dot">●</span> 静态数据
+    </div>
+    <button id="refresh-btn" class="refresh-btn" title="手动刷新数据">⟳</button>
   </div>
 </nav>
 
@@ -389,7 +395,10 @@
 <!-- ============================================================
      SCRIPTS (order matters: data first, then modules, then app)
      ============================================================ -->
+<script src="js/config.js"></script>
 <script src="js/data.js"></script>
+<script src="js/api.js"></script>
+<script src="js/dataService.js"></script>
 <script src="js/standings.js"></script>
 <script src="js/matches.js"></script>
 <script src="js/players.js"></script>
