添加赛前新闻信息

--- a/index.html
+++ b/index.html
@@ -377,7 +377,13 @@
         </div>
       </div>
 
-      <!-- ④ AI 分析文字 -->
+      <!-- ④ 赛前新闻动态 -->
+      <div class="mb-16">
+        <div class="card-title">📰 赛前新闻动态</div>
+        <div id="pred-news"></div>
+      </div>
+
+      <!-- ⑤ AI 分析文字 -->
       <div>
         <div class="card-title">🧠 赛前深度分析</div>
         <div id="pred-analysis-text" class="pred-analysis-text"></div>
