fix issues for add news

--- a/index.html
+++ b/index.html
@@ -343,7 +343,13 @@
         </div>
       </div>
 
-      <!-- ② 球队对比 + 雷达 + 近期状态 -->
+      <!-- ② 赛前新闻动态 -->
+      <div class="news-section mb-16">
+        <div class="card-title">📰 赛前新闻动态</div>
+        <div id="pred-news"></div>
+      </div>
+
+      <!-- ③ 球队对比 + 雷达 + 近期状态 -->
       <div class="grid-3 gap-16 mb-16">
         <div>
           <div class="card-title">📊 实力横向对比</div>
@@ -375,12 +381,6 @@
           <div class="card-title">🏥 伤情影响</div>
           <div id="pred-injuries"></div>
         </div>
-      </div>
-
-      <!-- ④ 赛前新闻动态 -->
-      <div class="mb-16">
-        <div class="card-title">📰 赛前新闻动态</div>
-        <div id="pred-news"></div>
       </div>
 
       <!-- ⑤ AI 分析文字 -->
