--- a/index.html
+++ b/index.html
@@ -135,9 +135,8 @@
     <div class="section-header">
       <h2 class="section-title">比赛数据分析</h2>
       <div class="filter-controls">
-        <button class="filter-btn active" data-filter="all">全部</button>
-        <button class="filter-btn" data-filter="completed">已完成</button>
-        <button class="filter-btn" data-filter="upcoming">即将进行</button>
+        <button class="filter-btn" data-filter="all">全部</button>
+        <button class="filter-btn active" data-filter="completed">已完成</button>
       </div>
     </div>
 
@@ -529,7 +528,7 @@
     <!-- 自动刷新开关 -->
     <div class="live-auto-row">
       <label class="live-auto-label">
-        <input type="checkbox" id="panel-auto-toggle" checked>
+        <input type="checkbox" id="panel-auto-toggle">
         <span class="live-auto-track"></span>
         <span class="live-auto-text">自动刷新</span>
       </label>
